--- a/sfdx/install
+++ b/sfdx/install
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 set -e
-mkdir /app/bin
-DIR=/app/bin
+mkdir /app/cli
+DIR=/app/cli
 
 # if [ -d /usr/local/bin ]; then
 #   DIR=/usr/local/bin
